Fix for border colors too dark issue

--- a/resources/css/tool.css
+++ b/resources/css/tool.css
@@ -144,6 +144,7 @@ div.nova-calendar .day {
   grid-row: 1/-1;
   min-height: 9em;
   border-width: 0.5px;
+  border-color: rgba(var(--colors-gray-500), 0.15);
 }
 
 /* TODO add striped background or something */
